--- a/SpecflowFirst/log4net.config
+++ b/SpecflowFirst/log4net.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<log4net>
-		<appender name="DebugAppender" type="log4net.Appender.DebugAppender" >
+		<!--<appender name="DebugAppender" type="log4net.Appender.DebugAppender" >
 			<layout type="log4net.Layout.PatternLayout">
 				<conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
 			</layout>
-		</appender>
+		</appender>-->
 		<appender name="File" type="log4net.Appender.FileAppender">
 			<file value="main.log" />
 			<appendToFile value="true" />
@@ -16,7 +16,7 @@
 		</appender>
 		<root>
 			<level value="ALL"/>
-			<appender-ref ref="DebugAppender" />
+			<!--<appender-ref ref="DebugAppender" />-->
 			<appender-ref ref="File" />
 		</root>
 	</log4net>
